--- a/HackingProjekt/Pages/Anmendelser/Index.cshtml
+++ b/HackingProjekt/Pages/Anmendelser/Index.cshtml
@@ -83,7 +83,7 @@
                     @Html.DisplayFor(modelItem => item.Forfatter)
                 </td>
                 <th>
-                    @Html.DisplayFor(model => item.Aldersgrænse)
+                    @Html.DisplayFor(modelItem => item.Aldersgrænse)
                 </th>
                 <td>
                     
