Log ud side oversat til dansk

--- a/HackingProjekt/Pages/Account/editUsername.cshtml
+++ b/HackingProjekt/Pages/Account/editUsername.cshtml
@@ -5,7 +5,7 @@
 @{
 }
 
-<h2>Lav dit bugerNavn</h2>
+<h2>Lav dit Brugernavn</h2>
 
 <form method="post">
     <div>
@@ -13,5 +13,6 @@
         <input type="text" id="newUsername" name="newUsername" required />
         <span asp-validation-for="NewUsername"></span>
     </div>
-    <button type="submit">Save</button>
+    <br/>
+    <button type="submit">Gem</button>
 </form>
