--- a/HackingProjekt/Pages/Account/Logout.cshtml
+++ b/HackingProjekt/Pages/Account/Logout.cshtml
@@ -6,10 +6,10 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-12 col-lg-4">
-             <p> Are you sure you want to logout?</p>            
+             <p> Er du sikker på du ville logge ud?</p>            
               <p>
-                  <button class="btn btn-primary" asp-page-handler = "Logout">Yes</button>
-                    <button class="btn btn-light m-lg-5 border-dark" asp-page-handler="DontLogout">no</button>
+                  <button class="btn btn-primary" asp-page-handler = "Logout">Ja</button>
+                    <button class="btn btn-light m-lg-5 border-dark" asp-page-handler="DontLogout">Nej</button>
 
               </p>       
             </div>
