--- a/HackingProjekt/Pages/Anmendelser/Delete.cshtml
+++ b/HackingProjekt/Pages/Anmendelser/Delete.cshtml
@@ -5,11 +5,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Sletning af Anmendelse</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3> Er du sikker på at ville slette denne anmendelse?</h3>
 <div>
-    <h4>Movie</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -36,18 +35,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movie.Aldersgrænse)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Movie.Andmenelse)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Movie.Andmenelse)
-        </dd>
 
     </dl>
     
     <form method="post">
         <input type="hidden" asp-for="Movie.Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-page="./Index">Back to List</a>
+        <input type="submit" value="Slet" class="btn btn-danger" /> |
+        <a asp-page="./Index">Tilbage</a>
     </form>
 </div>
