--- a/HackingProjekt/Pages/Anmendelser/Index.cshtml
+++ b/HackingProjekt/Pages/Anmendelser/Index.cshtml
@@ -12,13 +12,13 @@
 <h1>Anmendelser</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a class="btn btn-primary" asp-page="Create">Lav Anmendelse</a>
 </p>
 
 <form>
     <p>
         Title: <input type="text" asp-for="SearchString" />
-        <input type="submit" value="Search" />
+        <input type="submit" value="Søg" />
     </p>
 </form>
 <form method="get">
@@ -42,7 +42,7 @@
             </label>
         }
     </td>
-    <button type="submit">Apply Filters</button>
+    <button type="submit">Filtrere</button>
 </form>
 
 <table class="table">
