--- a/HackingProjekt/Pages/Shared/_Layout.cshtml
+++ b/HackingProjekt/Pages/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="navbar-brand" asp-page="/Account/Logout" style="color:blue">Logout</a>
+                                <a class="navbar-brand" asp-page="/Account/Logout" style="color:blue">Log ud</a>
                             </li>
                             
 
